# ikCore

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
include/ikCore/: ikCompiler.hpp  ikGlobal.hpp  ikProcessor.hpp  ikSystem.hpp  ikVersion.hpp
source/ikCore/: ikGlobal.cpp
